<resources>
    <string name="app_name">NucuHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NucuHub</string>
    <string name="nav_header_subtitle">denis@nuculabs.dev</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Main Menu-->
    <string name="action_settings">Settings</string>

    <!-- Activity Titles-->
    <string name="title_activity_settings">Settings Activity</string>

    <!-- Environment Sensor Data -->
    <string name="menu_environment_sensor">Environment Sensor</string>
    <string name="environment_status_description">Temperature sensor status</string>
    <string name="humidity_icon_desc">humidity image</string>
    <string name="temperature_icon_desc">temperature icon</string>
    <string name="barometer_icon_desc">barometer icon</string>
    <string name="voc_icon_desc">voc icon</string>
    <string name="humidity_sensor_unit">Rh%</string>
    <string name="temp_sensor_unit">Celsius</string>
    <string name="pressure_unit_desc">hPa</string>
    <string name="gasvoc_sensor_unit_description">VOC kΩ</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="devices_header">Devices</string>

    <!-- Device Preferences -->
    <string name="device_selection_title">Your current device</string>
    <string name="device_management_title">Device Management</string>
    <string name="settings_connect_new_device">Connect new device</string>
    <string name="settings_device_test_connection_btn">Add Device</string>
    <string name="settings_device_add_new_device_input_hint">http://hostname:port</string>
    <string name="settings_device_saved_devices">Saved Devices</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="select_icon">Select Icon</string>
</resources>