<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_environment_sensor">

    <fragment
            android:id="@+id/nav_environment_sensor"
            android:name="dev.nuculabs.nucuhub.ui.sensors.SensorsFragment"
            android:label="@string/menu_environment_sensor"
            tools:layout="@layout/fragment_environment_sensor"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="dev.nuculabs.nucuhub.ui.gallery.GalleryFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="dev.nuculabs.nucuhub.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow"/>
</navigation>